<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		>

	<LinearLayout
			android:orientation="vertical"
			android:background="@color/mat_white"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingLeft="@dimen/marginxLarge"
			android:paddingRight="@dimen/marginxLarge"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txt_alphabet"
				tools:text="A"
				tools:textColor="@color/mat_gray"
				android:textColor="@color/mat_white"
				android:textSize="48sp"
				android:layout_marginTop="32dp"
				android:gravity="center"
				style="@style/AudioFileInfoOverlayText"
				android:layout_marginBottom="@dimen/marginxLarge"
				/>


		<GridLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:columnCount="2"
				android:layout_marginRight="@dimen/activity_horizontal_margin"
				android:layout_marginLeft="@dimen/activity_horizontal_margin"
				android:layout_marginBottom="@dimen/marginxLarge"
				>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/form_view_height"
					android:text="@string/title_place"
					android:layout_marginRight="@dimen/marginSmall"
					android:layout_gravity="center_vertical"
					android:layout_marginBottom="@dimen/marginSmall"
					android:gravity="center_vertical" />

			<EditText
					android:layout_width="match_parent"
					android:layout_height="@dimen/form_view_height"
					android:id="@+id/edt_place"
					android:layout_marginTop="@dimen/marginMedium"
					android:singleLine="true"
					android:nextFocusDown="@+id/edt_animal"
					android:background="@drawable/bg_edittext"
					tools:text="Amsterdam Amsterdam Amsterdam Amsterdam Amsterdam"
					android:layout_marginBottom="@dimen/marginMedium"
					android:layout_gravity="fill_horizontal"
					android:paddingLeft="2dp" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/form_view_height"
					android:text="@string/title_animal"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="@dimen/marginSmall"
					android:layout_marginBottom="@dimen/marginSmall"
					android:gravity="center_vertical" />

			<EditText
					android:layout_width="match_parent"
					android:layout_height="@dimen/form_view_height"
					android:id="@+id/edt_animal"
					android:layout_gravity="clip_horizontal"
					android:singleLine="true"
					android:nextFocusDown="@+id/edt_name"
					android:background="@drawable/bg_edittext"
					tools:text="Ant"
					android:layout_marginTop="@dimen/marginMedium"
					android:layout_marginBottom="@dimen/marginMedium"
					android:paddingLeft="2dp" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/form_view_height"
					android:text="@string/title_name"
					android:layout_marginRight="@dimen/marginSmall"
					android:layout_gravity="center_vertical"
					android:layout_marginBottom="@dimen/marginSmall"
					android:gravity="center_vertical" />

			<EditText
					android:layout_width="match_parent"
					android:layout_height="@dimen/form_view_height"
					android:id="@+id/edt_name"
					android:singleLine="true"
					android:nextFocusDown="@+id/edt_thing"
					android:background="@drawable/bg_edittext"
					tools:text="Alistair"
					android:layout_marginTop="@dimen/marginMedium"
					android:layout_marginBottom="@dimen/marginMedium"
					android:paddingLeft="2dp" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/form_view_height"
					android:text="@string/title_thing"
					android:layout_marginRight="@dimen/marginSmall"
					android:layout_gravity="center_vertical"
					android:layout_marginBottom="@dimen/marginSmall"
					android:gravity="center_vertical" />

			<EditText
					android:layout_width="match_parent"
					android:layout_height="@dimen/form_view_height"
					android:id="@+id/edt_thing"
					android:singleLine="true"
					android:nextFocusDown="@+id/edt_song"
					android:background="@drawable/bg_edittext"
					tools:text="Apple"
					android:layout_marginTop="@dimen/marginMedium"
					android:layout_marginBottom="@dimen/marginMedium"
					android:paddingLeft="2dp" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/form_view_height"
					android:text="@string/title_song"
					android:layout_marginRight="@dimen/marginSmall"
					android:layout_gravity="center_vertical"
					android:layout_marginBottom="@dimen/marginSmall"
					android:gravity="center_vertical" />

			<EditText
					android:layout_width="match_parent"
					android:layout_height="@dimen/form_view_height"
					android:id="@+id/edt_song"
					android:singleLine="true"
					android:imeOptions="actionDone"
					android:background="@drawable/bg_edittext"
					tools:text="All of me"
					android:layout_marginTop="@dimen/marginMedium"
					android:layout_marginBottom="@dimen/marginMedium"
					android:paddingLeft="2dp" />

		</GridLayout>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:id="@+id/txt_timer"
				style="@style/TextViewStyle"
				android:textAppearance="@style/PrimaryTextAppearance.Title.Orange"
				tools:text="01:00"
			/>

		android:layout_marginTop="@dimen/marginLarge"
		<Button
				android:layout_gravity="center_horizontal"
				android:id="@+id/btn_submit"
				android:text="@string/title_done"
				android:layout_marginTop="@dimen/marginLarge"
				style="@style/Widget.Button"
				/>

	</LinearLayout>
</ScrollView>
